# seleasium

./: README.md  pyproject.toml
src/: seleasium.py
tests/: test.py
